[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Troops/Player/HUD/ShieldLifeBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/interface/pilot-bw.png" type="Texture2D" id=2]
[ext_resource path="res://MatchUI.gd" type="Script" id=3]
[ext_resource path="res://assets/interface/pilot.png" type="Texture2D" id=4]
[ext_resource path="res://assets/interface/life_bar.png" type="Texture2D" id=5]
[ext_resource path="res://assets/interface/themes/default_theme.tres" type="Theme" id=6]
[ext_resource path="res://src/HUD/MatchMessage.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/interface/themes/new_theme.tres" type="Theme" id=8]
[ext_resource path="res://src/HUD/CPIndicator.tscn" type="PackedScene" id=10]

[node name="MatchUI" type="CanvasLayer"]
layer = 4
script = ExtResource( 3 )
blue_ship = NodePath("../BigShips/CapitalShipBlue")
red_ship = NodePath("../BigShips/CapitalShipRed")

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -276.0
offset_top = 82.0
offset_right = 276.0
offset_bottom = 149.0

[node name="LifeBarRedShield" parent="Control" instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -38.0
offset_bottom = -18.0

[node name="RedSupportShips" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -14.0
offset_right = 125.0

[node name="LifeBarRedShield" parent="Control/RedSupportShips" instance=ExtResource( 1 )]
offset_right = 60.0
offset_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LifeBarRedShield2" parent="Control/RedSupportShips" instance=ExtResource( 1 )]
offset_left = 64.0
offset_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LifeBarBlueShield" parent="Control" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -38.0
offset_right = 0.0
offset_bottom = -18.0

[node name="BlueSupportShips" type="HBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -14.0

[node name="LifeBarBluedShield" parent="Control/BlueSupportShips" instance=ExtResource( 1 )]
offset_right = 60.0
offset_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LifeBarBlueShield2" parent="Control/BlueSupportShips" instance=ExtResource( 1 )]
offset_left = 64.0
offset_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control"]
offset_right = 40.0
offset_bottom = 14.0
text = "RED:"

[node name="Label2" type="Label" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 14.0
text = "BLUE:"

[node name="MiddlePointBar" type="TextureProgressBar" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_right = 88.0
offset_bottom = 14.0
min_value = -100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.47451, 0.47451, 1, 1 )
tint_progress = Color( 1, 0.454902, 0.454902, 1 )
nine_patch_stretch = true

[node name="CPIndicators" type="HBoxContainer" parent="Control"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -25.0
offset_right = 79.0

[node name="CPIndicator" parent="Control/CPIndicators" instance=ExtResource( 10 )]
offset_right = 23.0

[node name="CPIndicator2" parent="Control/CPIndicators" instance=ExtResource( 10 )]
offset_left = 27.0
offset_right = 50.0

[node name="CPIndicator3" parent="Control/CPIndicators" instance=ExtResource( 10 )]
offset_left = 54.0
offset_right = 77.0

[node name="CPIndicator4" parent="Control/CPIndicators" instance=ExtResource( 10 )]
offset_left = 81.0
offset_right = 104.0

[node name="CPIndicator5" parent="Control/CPIndicators" instance=ExtResource( 10 )]
offset_left = 108.0
offset_right = 131.0

[node name="CPIndicator6" parent="Control/CPIndicators" instance=ExtResource( 10 )]
offset_left = 135.0
offset_right = 158.0

[node name="Control2" type="HBoxContainer" parent="."]
visible = false
offset_left = 89.0
offset_top = 81.0
offset_right = 397.0
offset_bottom = 130.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control2"]
offset_right = 58.0
offset_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 4
nine_patch_stretch = true

[node name="TextureProgress2" type="TextureProgressBar" parent="Control2"]
offset_left = 62.0
offset_right = 120.0
offset_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 70.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 4
nine_patch_stretch = true

[node name="TextureProgress3" type="TextureProgressBar" parent="Control2"]
offset_left = 124.0
offset_right = 183.0
offset_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 4
nine_patch_stretch = true

[node name="TextureProgress4" type="TextureProgressBar" parent="Control2"]
offset_left = 187.0
offset_right = 245.0
offset_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 30.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 4
nine_patch_stretch = true

[node name="TextureProgress5" type="TextureProgressBar" parent="Control2"]
offset_left = 249.0
offset_right = 308.0
offset_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 10.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 4
nine_patch_stretch = true

[node name="MatchMessages" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -325.0
offset_top = 82.0
offset_right = -118.0
offset_bottom = 340.0
theme = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="MatchMessage" parent="MatchMessages" instance=ExtResource( 7 )]
visible = false

[node name="MatchMessage2" parent="MatchMessages" instance=ExtResource( 7 )]
visible = false

[node name="Label" type="Label" parent="."]
offset_top = 126.0
offset_right = 212.0
offset_bottom = 189.0
theme = ExtResource( 8 )
text = "PUNTS VERMELLS : 0
PUNTS BLAUS: 0"
